<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AjouterPage">
    <EditText
        style="@style/StyleEdit"
        android:hint="@string/app_hintEditRS"
        android:layout_marginBottom="20px"

        android:id="@+id/ajoutRaisonS"/>
    <EditText
        style="@style/StyleEdit"
        android:layout_below="@+id/ajoutRaisonS"
        android:hint="@string/app_hintEditAd"
        android:layout_marginBottom="20px"

        android:id="@+id/ajoutadresse"/>
    <EditText
        style="@style/StyleEdit"
        android:layout_below="@+id/ajoutadresse"
        android:hint="@string/app_hintEditC"
        android:layout_marginBottom="20px"

        android:id="@+id/ajoutCapital"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        style="@style/StyleButton"
        android:layout_marginBottom="20px"
        android:layout_below="@+id/ajoutCapital"
        android:id="@+id/ajoutBtnEnregistrez"
        android:layout_marginLeft="100dp"

        android:text="@string/btn_Enregistrez"/>

    <Button
        android:id="@+id/ajoutBtnAnnuler"
        style="@style/StyleButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@+id/ajoutCapital"
        android:layout_toRightOf="@+id/ajoutBtnEnregistrez"
        android:text="@string/btn_annuler" />
</RelativeLayout>